--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <div style="background-color:#f1f1f1;text-align: center;padding:40px;">
-<img src="C:\Users\Administrator\Desktop\图片文件\zfe 副本.jpg" alt="刘煌" width="80px" height="120px">
+<img src="C:\Users\Administrator\Desktop\run\img\01.jpg" alt="刘煌" width="80px" height="120px">
 </div>
 <div style="
 max-width:700px;
