--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div style="background-color: #f1f1f1; text-align: center; padding: 40px">
       <img
-        src="img/01.jpg"
+        src="https://github.com/TinyHSir/re01-one/blob/main/img/01.jpg"
         alt="刘煌"
         width="80px"
         height="120px"
